comment out non working version

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -106,7 +106,7 @@
   
    <%= javascript_include_tag "application" %>
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script> 
-  <!--  <%= javascript_include_tag "jquery-1.7.2.min.js" %> -->
+  <!--  <%# = javascript_include_tag "jquery-1.7.2.min.js" %> -->
    <%= javascript_include_tag "jquery-ui-1.8.20.custom.min.js"%>
    <%= javascript_include_tag "jquery.coda-slider-3.0.js"%>
    <%= javascript_include_tag "jquery.coda-slider-3.0.min.js"%>
