--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -63,12 +63,12 @@
 
     <!-- Mobile Header -->
  
-      <div class="row">
+     <!--  <div class="row">
         <div class="large-12 columns show-for-small">
  
         </div>
-      </div>
-     <br>
+      </div> -->
+   
  
     <!-- End Mobile Header -->
   <header>
