--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -949,10 +949,13 @@ $f-dropdown-list-hover-bg: red;
 //
 
 // Background color for the top bar
+//################## check this on //
  $topbar-bg: rgb(147,149,152);
 
 // Height and margin
- $topbar-height: 30px;
+//################## check this on //
+  
+$topbar-height: 30px;
 // $topbar-margin-bottom: emCalc(30px);
 
 // Control Input height for top bar
