--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -132,7 +132,7 @@
 
           $('#slider-id').liquidSlider({
             autoSlide:true,
-            autoHeight:false
+            autoHeight:true
           });
 
          // Find more options at http://liquidslider.kevinbatdorf.com/
